# vulkan-scene

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  build_deps.py  builder.py  cmakeformat.py  generate.py  generator.py  vcpkg.json  vk_layer_settings.txt
.github/workflows/: build.yml
shaders/: basic.frag  basic.vert  push-constants.glsl
src/: CMakeLists.txt  buffers.c  buffers.cpp  buffers.h  buffers.hpp  commands.c  commands.h  common.hpp  device.c  device.cpp  device.h  device.hpp  framebuffer-manager.c  framebuffer-manager.cpp  framebuffer-manager.h  framebuffer-manager.hpp  graphics-pipeline.c  graphics-pipeline.cpp  graphics-pipeline.h  graphics-pipeline.hpp  graphics.cpp  graphics.h  graphics.hpp  main.c  main.cpp  math.c  math.h  math.hpp  pch.hpp  pipeline.c  render-pass.cpp  render-pass.hpp  renderer.c  renderer.cpp  renderer.h  renderer.hpp  swap-chain.c  swap-chain.cpp  swap-chain.h  swap-chain.hpp  (+18 more)
src/platform/: CMakeLists.txt
src/platform/win32/: window.c  window.cpp
src/platform/x11/: CMakeLists.txt  window.c  window.cpp
tests/: CMakeLists.txt  devices-with-validation.cpp  devices.cpp  devices.hpp  instance.cpp  matrix-multiplication.cpp  swapchain.cpp  window.cpp
tools/: cmake.py  generator.py  msvc.py  script_gen.py
